improve(api): make DirectorySource immutable, and add additional convenient methods